# react-native-pdf-viewer

./: .gitignore  LICENSE  PdfViewer.podspec  README.md  nitro.json  package.json
RNPdfViewer/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
RNPdfViewer/android/: settings.gradle
RNPdfViewer/android/app/: build.gradle
RNPdfViewer/components/: TileCache.ts
RNPdfViewer/ios/: Podfile
RNPdfViewer/ios/RNPdfViewer.xcodeproj/: project.pbxproj
RNPdfViewer/ios/RNPdfViewer.xcworkspace/: contents.xcworkspacedata
RNPdfViewer/src/: NewPdfViewer.tsx  PageCache.ts  PdfViewer.tsx  TileCache.ts
android/: CMakeLists.txt  build.gradle  gradle.properties
cpp/: HybridPdfViewer.cpp  HybridPdfViewer.hpp  TileCache.hpp
example/: App.tsx  babel.config.js  metro.config.js  package.json  tsconfig.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/components/: PageTile.tsx  PdfPage.tsx  TileCache.ts  VirtualizedCanvas.tsx
example/ios/: Podfile
ios/: Bridge.h
react-native-pdfium/: NitroPdfium.podspec  README.md  nitro.json  package-lock.json  package.json  tsconfig.tsbuildinfo
react-native-pdfium/android/: CMakeLists.txt  build.gradle  gradle.properties
react-native-pdfium/android/src/main/cpp/: cpp-adapter.cpp
react-native-pdfium/android/src/main/java/com/margelo/nitro/pdfium/: NitroPdfiumPackage.java
react-native-pdfium/cpp/: HybridPdfiumUtil.cpp  HybridPdfiumUtil.hpp  TileCache.hpp
react-native-pdfium/ios/: Bridge.h
react-native-pdfium/src/: index.ts
src/: index.ts
src/specs/: pdf-viewer.nitro.ts
(+17 files in other folders)
